--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ build-test ]
   pull_request:
     branches: [ master ]
 
@@ -11,16 +11,35 @@ permissions:
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
       matrix:
-        ruby: [ 2.6, 2.7, "3.0", 3.1, 3.2, 3.3, 3.4 ]
-    name: ${{ matrix.ruby }}
+        # ruby: [ 2.6, 2.7, "3.0", 3.1, 3.2, 3.3, 3.4 ]
+        ruby: [ 3.4 ]
+        runner: [ ubuntu-22.04, ubuntu-24.04, ubicloud-standard-4-ubuntu-2204, ubicloud-standard-4-ubuntu-2404 ]
+    name: ${{ matrix.ruby }} ${{ matrix.runner }}
     env:
       BUNDLE_GEMFILE: .ci.gemfile
     steps:
     - uses: actions/checkout@v4
+    - run: |
+        sudo apt-get update
+        sudo apt-get upgrade -y
+        sudo apt-get install --only-upgrade -y curl
+        sudo apt-get install --only-upgrade -y libcurl4
+        sudo apt-get install --only-upgrade -y libgbm-dev
+        RUBY_VERSION="3.4.1"
+        sudo rm -rf $RUNNER_TOOL_CACHE/Ruby/$RUBY_VERSION
+
+        git clone https://github.com/rbenv/ruby-build.git
+        sudo ./ruby-build/install.sh
+        sudo ruby-build "$RUBY_VERSION" $RUNNER_TOOL_CACHE/Ruby/$RUBY_VERSION/x64
+        sudo chown -R runner:runner $RUNNER_TOOL_CACHE/Ruby
+        touch $RUNNER_TOOL_CACHE/Ruby/$RUBY_VERSION/x64.complete
+        rm -rf ruby-build
+
+
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
